Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3334

qsd_reint threads shouldn't all have the same name

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.5.0
    • Lustre 2.4.0
    • None
    • 3
    • 8248

      In https://maloo.whamcloud.com/test_logs/76f41d22-ba7f-11e2-b1a3-52540035b04c it appears that all of the "qsd_reint" threads have the same process name:

      13:42:46:qsd_reint     S 0000000000000000     0 25485      2 0x00000080
      13:42:46:qsd_reint     S 0000000000000000     0 25486      2 0x00000080
      13:42:46:qsd_reint     S 0000000000000000     0 25487      2 0x00000080
      [repeat]
      

      Note they all have different process IDs. It would be better to have qsd_reint_01, qsd_reint_02, etc.

            niu Niu Yawei (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: