LU-3334 quota: use different names for reint threads

Use different thread names for the quota reint threads.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I54a4d074106e6f0fa9a21a0fd91a9096c54035f4